Added MACsec support for different chip targets, part #2

--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -44,6 +44,10 @@ MEPA_LIB(LIB_NAME mepa_caracal ADVANCED
          DEFS     -DMEPA_HAS_VTSS
          DRVS     mepa_drv_vtss)
 
+MEPA_LIB(LIB_NAME mepa_caracal_macsec ADVANCED
+         DEFS     -DMEPA_HAS_VTSS
+         DRVS     mepa_drv_vtss_10g_macsec_ts)
+
 MEPA_LIB(LIB_NAME mepa_jr2 ADVANCED
          DEFS     -DMEPA_HAS_VTSS       -DMEPA_HAS_AQR  -DMEPA_HAS_GPY2211
          DRVS     mepa_drv_vtss_10g_ts  mepa_drv_aqr    mepa_drv_intel)
@@ -60,9 +64,17 @@ MEPA_LIB(LIB_NAME mepa_servalt ADVANCED
          DEFS     -DMEPA_HAS_VTSS
          DRVS     mepa_drv_vtss_10g_ts)
 
+MEPA_LIB(LIB_NAME mepa_servalt_macsec ADVANCED
+         DEFS     -DMEPA_HAS_VTSS
+         DRVS     mepa_drv_vtss_10g_macsec_ts)
+
 MEPA_LIB(LIB_NAME mepa_ocelot ADVANCED
          DEFS     -DMEPA_HAS_VTSS  -DMEPA_HAS_LAN8814
          DRVS     mepa_drv_vtss_ts mepa_drv_lan8814)
+
+MEPA_LIB(LIB_NAME mepa_ocelot_macsec ADVANCED
+         DEFS     -DMEPA_HAS_VTSS  -DMEPA_HAS_LAN8814
+         DRVS     mepa_drv_vtss_10g_macsec_ts mepa_drv_lan8814)
 
 MEPA_LIB(LIB_NAME mepa_ocelot_pcb121 ADVANCED
          DEFS     -DMEPA_HAS_VTSS
