IMPORT: mepa d969f7c04190899822ad12c05108424c05bcd0e3
From URL: ssh://git@bitbucket.microchip.com/unge/sw-mepa.git

--- a/mepa/CMakeLists.txt
+++ b/mepa/CMakeLists.txt
@@ -109,12 +109,12 @@ MEPA_LIB(LIB_NAME mepa_velocitysp_lan966x ADVANCED
          DRVS     mepa_drv_lan8814)
 
 MEPA_LIB(LIB_NAME mepa_velocitysp_lan969x ADVANCED
-         DEFS     -DMEPA_HAS_LAN8814 -DMEPA_HAS_LAN884x
-         DRVS     mepa_drv_lan8814_light mepa_drv_lan884x)
+         DEFS     -DMEPA_HAS_LAN8814 -DMEPA_HAS_LAN884x -DMEPA_HAS_LAN8X8X
+         DRVS     mepa_drv_lan8814_light mepa_drv_lan884x mepa_drv_lan8x8x)
 
 MEPA_LIB(LIB_NAME mepa_velocitysp_lan969x_auto ADVANCED
-         DEFS     -DMEPA_HAS_LAN887X -DMEPA_HAS_LAN884x -DMEPA_HAS_LAN867X
-         DRVS     mepa_drv_lan887x mepa_drv_lan884x mepa_drv_lan867x)
+         DEFS     -DMEPA_HAS_LAN887X -DMEPA_HAS_LAN884x -DMEPA_HAS_LAN867X -DMEPA_HAS_LAN8X8X
+         DRVS     mepa_drv_lan887x mepa_drv_lan884x mepa_drv_lan867x mepa_drv_lan8x8x)
 
 MEPA_LIB(LIB_NAME mepa_p64h ADVANCED
          DEFS     -DMEPA_HAS_VTSS       -DMEPA_HAS_DUMMY_PHY
