--- a/mepa/microchip/CMakeLists.txt
+++ b/mepa/microchip/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(lan8770)
 add_subdirectory(lan887x)
 add_subdirectory(lan867x)
 add_subdirectory(lan80xx)
+add_subdirectory(lan8x8x)
